== 2.2.0.rc1 / 2012-09-21
* Deleted, refactored, improved and moved cypher stuff to neo4j-cypher gem
* Add neo4j statistics, #15

== 2.1.0 / 2012-08-14

* Fix for cypher query with node(*) throw error. #13
* Add methods for Neo4j HA: ha_enabled? ha_master? #12
* Upgrade to 1.8.M06 - breaking changes, some traversals methods use path objects

== 2.0.1 / 2012-06-07

* Remove hard coded Gem dependencies to neo4j-advanced and neo4j-enterprise, #11
* Make it possible to specify protected keys for Neo4j::Node.update, #8, #9
* Added missing method for start and end_node, #7

== 2.0.0 / 2012-06-05